# bolt.gives

./: .gitignore  404.html  CHANGELOG.md  FEATURE_GENERATION_REPORT.md  TAURI_MIGRATION.md  index.html  package.json  uno.config.ts  v1.0.3.md  vite.config.ts
CONTRIBUTING/: index.html
FAQ/: index.html
app/: root.tsx
app/components/activity-sidebar/: ActivitySidebar.tsx
app/components/agent-hub/: AgentHub.tsx  index.ts
app/components/chat/: BaseChat.module.scss  BaseChat.tsx  Chat.client.tsx  ExecutionTransparencyPanel.tsx  StepRunnerFeed.spec.tsx  StepRunnerFeed.tsx
app/components/features/: agent-1FeaturePanel.tsx  ai-1FeaturePanel.tsx  analytics-1FeaturePanel.tsx  api-1FeaturePanel.tsx  audit-1FeaturePanel.tsx  automation-1FeaturePanel.tsx  backup-1FeaturePanel.tsx  billing-1FeaturePanel.tsx  bot-1FeaturePanel.tsx  cache-1FeaturePanel.tsx  cdn-1FeaturePanel.tsx  collaboration-1FeaturePanel.tsx  cron-1FeaturePanel.tsx  database-1FeaturePanel.tsx  deployment-1FeaturePanel.tsx  design-1FeaturePanel.tsx  development-1FeaturePanel.tsx  dns-1FeaturePanel.tsx  documentation-1FeaturePanel.tsx  environment-1FeaturePanel.tsx  executor-1FeaturePanel.tsx  firewall-1FeaturePanel.tsx  integration-1FeaturePanel.tsx  (+27 more)
app/lib/: version.ts
app/routes/: _index.tsx  api.chat.ts  api.check-env-key.ts  api.configured-providers.ts
app/styles/: animations.scss  index.scss  variables.scss
app/utils/: localStarterTemplates.ts
scripts/: generate-pages.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+76 files in other folders)
