[package]
name = "bolt-gives"
version = "1.0.2"
description = "bolt.gives collaborative AI agent"
authors = ["bolt.gives team <maintainers@bolt.gives>"]
license = "MIT"
repository = "https://github.com/embire2/bolt.gives"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bolt_gives_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bolt-gives"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
